--- a/taylorWeb.html
+++ b/taylorWeb.html
@@ -25,7 +25,7 @@
     <p>"Folklore" é mais do que um álbum; é uma exploração poética e melódica de histórias e emoções humanas, uma obra que convida os ouvintes a se perderem em suas narrativas cuidadosamente tecidas. Para muitos, representa um refúgio artístico em tempos incertos, oferecendo conforto e escapismo através de sua beleza musical.</p>
 <br>
    <h2>🏆Premiações do Folklore</h2>
-   <ul type="circle"> <!--esta é a tag para criar uma lista não ordenada. o tipo são os bullets-->
+   <ul type="circle"> 
     <li>Grammy Awards (2021) - Álbum do Ano</li>
     <li>Billboard Music Awards (2021) - Melhor Álbum de Billboard 200</li>
     <li>Brit Awards (2021) - Artista Solo Internacional Feminina</li>
