--- a/taylorWeb.html
+++ b/taylorWeb.html
@@ -6,13 +6,14 @@
     <meta name="author" content="Fernanda Viotto">
     <meta name="descrição" content="Página dedicada ao álbum Folklore de Taylor Swift">
     <meta name="keywords"  content="Taylor Swift, swiftie, folklore, grammy, indústria da música">
+    <link rel="stylesheet" type="text/css" href="estiloTay.css">
     <title>Folklore</title>
 </head>
 <body>
     <h1>Folklore</h1>
-    <h2>A Reinvenção Intimista de Taylor Swift</h2>
+    <h4>A Reinvenção Intimista de Taylor Swift</h4>
     <div id="folkTay">
-        <div id="folkTay">
+        <div id="folkTay" class="centro-block">
             <img src="https://media.vogue.fr/photos/5f1ae0b1a806c0ec57bc10d5/master/w_1600%2Cc_limit/006-Taylor-Swift-Folklore-vogue-240720-courtesy-Taylor-Swift.jpg" height="450" width="350" alt="Taylor Swift - Folklore 1">
             <img src="https://media.vogue.fr/photos/5f1ae0b16ec572967176b6ca/master/w_1280,c_limit/001-Taylor-Swift-Folklore-vogue-240720-courtesy-Taylor-Swift.jpg" height="450" width="350" alt="Taylor Swift - Folklore 2">
             <img src="https://i.pinimg.com/736x/b8/04/39/b804396d99be6f8e019f13928b0e417c.jpg" height="450" width="350" alt="Taylor Swift - Folklore 3">
@@ -24,8 +25,8 @@
     <p>A recepção crítica de "Folklore" foi amplamente positiva, com elogios à vulnerabilidade e à inovação artística de Swift. O álbum não apenas estreou no topo das paradas, mas também rendeu a Swift o Grammy de Álbum do Ano, solidificando sua posição como uma das artistas mais versáteis e influentes de sua geração.</p>
     <p>"Folklore" é mais do que um álbum; é uma exploração poética e melódica de histórias e emoções humanas, uma obra que convida os ouvintes a se perderem em suas narrativas cuidadosamente tecidas. Para muitos, representa um refúgio artístico em tempos incertos, oferecendo conforto e escapismo através de sua beleza musical.</p>
 <br>
-   <h2>🏆Premiações do Folklore</h2>
-   <ul type="circle"> 
+   <h2>Premiações do Folklore</h2>
+   <ul type="circle" class="centro"> 
     <li>Grammy Awards (2021) - Álbum do Ano</li>
     <li>Billboard Music Awards (2021) - Melhor Álbum de Billboard 200</li>
     <li>Brit Awards (2021) - Artista Solo Internacional Feminina</li>
@@ -37,11 +38,13 @@
     <li>People's Choice Awards (2020) - Álbum do Ano</li>
     </ul>
 <br>
-   <h2>✨Escute no Spotify</h2>
-   <iframe src="https://open.spotify.com/embed/album/2fenSS68JI1h4Fo296JfGr" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+   <h2>Escute no Spotify</h2>
+   <iframe src="https://open.spotify.com/embed/album/2fenSS68JI1h4Fo296JfGr" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="centro-block"></iframe>
 <br>
 <br>
-<h2>🎶Quer ver o seu artista favorito por aqui? Mande a sua sugestão!</h2>
+<div class="container1">
+    <h3>Quer ver o seu artista favorito por aqui?</h3>
+    <h3> Mande a sua sugestão!</h3>
     <form action="mailto:ferviotto@exemplo.com" method="post" enctype="multipart/form-data">
         Nome: <br>
         <input type="text" name="nome" value=""><br>
@@ -51,6 +54,7 @@
         <textarea rows="4" cols="50" placeholder=""></textarea><br>
         <br>
         <input type="submit" value="enviar"><br>
-        <p><a href="#">Voltar ao topo da página</a></p>
+</div>
+<p><a href="#">Voltar ao topo da página</a></p>
 </body>
 </html>
