Adicionando melhorias com JS

--- a/taylorWeb.html
+++ b/taylorWeb.html
@@ -5,56 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Fernanda Viotto">
     <meta name="descrição" content="Página dedicada ao álbum Folklore de Taylor Swift">
-    <meta name="keywords"  content="Taylor Swift, swiftie, folklore, grammy, indústria da música">
+    <meta name="keywords" content="Taylor Swift, swiftie, folklore, grammy, indústria da música">
     <link rel="stylesheet" type="text/css" href="estiloTay.css">
     <title>Folklore</title>
 </head>
 <body>
+    <script src="scriptTaylor.js" defer></script>
     <h1>Folklore</h1>
     <h4>A Reinvenção Intimista de Taylor Swift</h4>
-    <div id="folkTay">
-        <div id="folkTay" class="centro-block">
-            <img src="https://media.vogue.fr/photos/5f1ae0b1a806c0ec57bc10d5/master/w_1600%2Cc_limit/006-Taylor-Swift-Folklore-vogue-240720-courtesy-Taylor-Swift.jpg" height="450" width="350" alt="Taylor Swift - Folklore 1">
-            <img src="https://media.vogue.fr/photos/5f1ae0b16ec572967176b6ca/master/w_1280,c_limit/001-Taylor-Swift-Folklore-vogue-240720-courtesy-Taylor-Swift.jpg" height="450" width="350" alt="Taylor Swift - Folklore 2">
-            <img src="https://i.pinimg.com/736x/b8/04/39/b804396d99be6f8e019f13928b0e417c.jpg" height="450" width="350" alt="Taylor Swift - Folklore 3">
-            <img src="https://i.pinimg.com/originals/90/2a/d0/902ad0e6cac3d3be9dc9c02a95c6a481.png" height="450" width="350" alt="Taylor Swift - Folklore 4">
-        </div>
+    <div id="folkTay" class="centro-block">
+        <img src="https://media.vogue.fr/photos/5f1ae0b1a806c0ec57bc10d5/master/w_1600%2Cc_limit/006-Taylor-Swift-Folklore-vogue-240720-courtesy-Taylor-Swift.jpg" height="450" width="350" alt="Taylor Swift - Folklore 1">
+        <img src="https://media.vogue.fr/photos/5f1ae0b16ec572967176b6ca/master/w_1280,c_limit/001-Taylor-Swift-Folklore-vogue-240720-courtesy-Taylor-Swift.jpg" height="450" width="350" alt="Taylor Swift - Folklore 2">
+        <img src="https://i.pinimg.com/736x/b8/04/39/b804396d99be6f8e019f13928b0e417c.jpg" height="450" width="350" alt="Taylor Swift - Folklore 3">
+        <img src="https://i.pinimg.com/originals/90/2a/d0/902ad0e6cac3d3be9dc9c02a95c6a481.png" height="450" width="350" alt="Taylor Swift - Folklore 4">
+    </div>
     <p>Lançado em 24 de julho de 2020, "Folklore" é o oitavo álbum de estúdio de Taylor Swift. Este trabalho marcou uma transformação significativa na carreira da cantora, afastando-se do pop mainstream de seus álbuns anteriores para explorar sonoridades mais alternativas e introspectivas. Produzido durante a pandemia de COVID-19, "Folklore" reflete um período de reflexão e criatividade desenfreada, em que Swift colaborou virtualmente com Aaron Dessner do The National, além de seu colaborador de longa data Jack Antonoff e Justin Vernon do Bon Iver.</p>
     <p>"Folklore" é um álbum que abraça a narrativa e a composição lírica, contando histórias íntimas e detalhadas através de suas 16 faixas (17 na edição deluxe). Swift mergulha em temas de amor, perda, nostalgia e fantasia, criando um mundo musical que é tanto pessoal quanto universal. A abordagem mais acústica e minimalista, combinada com letras poéticas, proporciona uma experiência auditiva imersiva que se destaca em sua discografia.</p>
     <p>Faixas como "Cardigan," "Exile" (com Bon Iver) e "The Last Great American Dynasty" exemplificam a habilidade de Swift em criar personagens e cenários vívidos, transportando os ouvintes para diferentes épocas e emoções. "Betty," por outro lado, retorna ao storytelling adolescente que marcou seus primeiros trabalhos, mas com uma maturidade renovada e um toque de country-folk.</p> 
     <p>A recepção crítica de "Folklore" foi amplamente positiva, com elogios à vulnerabilidade e à inovação artística de Swift. O álbum não apenas estreou no topo das paradas, mas também rendeu a Swift o Grammy de Álbum do Ano, solidificando sua posição como uma das artistas mais versáteis e influentes de sua geração.</p>
     <p>"Folklore" é mais do que um álbum; é uma exploração poética e melódica de histórias e emoções humanas, uma obra que convida os ouvintes a se perderem em suas narrativas cuidadosamente tecidas. Para muitos, representa um refúgio artístico em tempos incertos, oferecendo conforto e escapismo através de sua beleza musical.</p>
-<br>
-   <h2>Premiações do Folklore</h2>
-   <ul type="circle" class="centro"> 
-    <li>Grammy Awards (2021) - Álbum do Ano</li>
-    <li>Billboard Music Awards (2021) - Melhor Álbum de Billboard 200</li>
-    <li>Brit Awards (2021) - Artista Solo Internacional Feminina</li>
-    <li>iHeartRadio Music Awards (2021) - Álbum Pop do Ano</li>
-    <li>American Music Awards (2020) - Artista Feminina Favorita Pop/Rock</li>
-    <li>Apple Music Awards (2020) - Compositora do Ano</li>
-    <li>ARIA Music Awards (2020) - Melhor Artista Internacional</li>
-    <li>MTV Europe Music Awards (2020) - Melhor Artista Americana</li>
-    <li>People's Choice Awards (2020) - Álbum do Ano</li>
+    <br>
+    <h2>Premiações do Folklore</h2>
+    <ul type="circle" class="centro"> 
+        <li>Grammy Awards (2021) - Álbum do Ano</li>
+        <li>Billboard Music Awards (2021) - Melhor Álbum de Billboard 200</li>
+        <li>Brit Awards (2021) - Artista Solo Internacional Feminina</li>
+        <li>iHeartRadio Music Awards (2021) - Álbum Pop do Ano</li>
+        <li>American Music Awards (2020) - Artista Feminina Favorita Pop/Rock</li>
+        <li>Apple Music Awards (2020) - Compositora do Ano</li>
+        <li>ARIA Music Awards (2020) - Melhor Artista Internacional</li>
+        <li>MTV Europe Music Awards (2020) - Melhor Artista Americana</li>
+        <li>People's Choice Awards (2020) - Álbum do Ano</li>
     </ul>
-<br>
-   <h2>Escute no Spotify</h2>
-   <iframe src="https://open.spotify.com/embed/album/2fenSS68JI1h4Fo296JfGr" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="centro-block"></iframe>
-<br>
-<br>
-<div class="container1">
-    <h3>Quer ver o seu artista favorito por aqui?</h3>
-    <h3> Mande a sua sugestão!</h3>
-    <form action="mailto:ferviotto@exemplo.com" method="post" enctype="multipart/form-data">
-        Nome: <br>
-        <input type="text" name="nome" value=""><br>
-        E-mail: <br>
-        <input type="email" name="mail" value=""><br>
-        Sugestão: <br>
-        <textarea rows="4" cols="50" placeholder=""></textarea><br>
-        <br>
-        <input type="submit" value="enviar"><br>
-</div>
-<p><a href="#">Voltar ao topo da página</a></p>
+    <br>
+    <h2>Escute no Spotify</h2>
+    <iframe src="https://open.spotify.com/embed/album/2fenSS68JI1h4Fo296JfGr" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="centro-block"></iframe>
+    <br><br>
+    <div class="container1">
+        <h3>Quer ver o seu artista favorito por aqui?</h3>
+        <h3>Mande a sua sugestão!</h3>
+        <form id="suggestionForm" action="mailto:ferviotto@exemplo.com" method="post" enctype="multipart/form-data">
+            Nome: <br>
+            <input type="text" name="nome" value=""><br>
+            E-mail: <br>
+            <input type="email" name="mail" value=""><br>
+            Sugestão: <br>
+            <textarea rows="4" cols="50" placeholder="" name="suggestion"></textarea><br><br>
+            <input type="submit" value="enviar"><br>
+        </form>
+        <div id="suggestionMessage" style="display:none; color: green; margin-top: 10px;">Sugestão enviada com sucesso!</div>
+    </div>
+    <p><a href="#">Voltar ao topo da página</a></p>
 </body>
 </html>
