--- a/lanaWeb.html
+++ b/lanaWeb.html
@@ -10,6 +10,7 @@
     <title>Lana Del Rey</title>
 </head>
 <body>
+    <script src="scriptLana.js" defer></script>
     <h1>Lana Del Rey</h1>
     <h2>A Voz Melancólica da Geração</h2>
         <div id="Lana1">
@@ -21,64 +22,64 @@
 <h4>Discografia</h4>
 <a name="BTD" title="Born To Die">
     <h2>Born To Die (2012)</h2>
-        <div id="Lana2">
-            <img src="https://m.media-amazon.com/images/I/71v9YKQxm2L._UF1000,1000_QL80_.jpg" alt="Lana2" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+        <div id="Lana2" class="container1">
+            <img id="imagem1" src="https://m.media-amazon.com/images/I/71v9YKQxm2L._UF1000,1000_QL80_.jpg" alt="Lana2" style="width:100%;max-width:600px;height:auto;" class="centro-block">
         </div>
 </a>
 <p>"Born to Die" é o álbum de estreia de Lana Del Rey e marcou sua ascensão meteórica no cenário musical. Com faixas icônicas como "Video Games", "Born to Die" e "Summertime Sadness", o álbum explora temas de amor tumultuado e glamour trágico. A produção luxuosa, combinada com as letras melancólicas e a voz etérea de Lana, criou um som distinto que redefiniu o pop alternativo. O álbum recebeu críticas mistas, mas conquistou uma base de fãs fervorosa e estabeleceu Lana Del Rey como uma força inovadora na música.</p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="Ultraviolence" title="Ultraviolence">
     <h2>Ultraviolence (2014)</h2>
-        <div id="Lana3">
-            <img src="https://m.media-amazon.com/images/I/71db3Yhv6AL._UF1000,1000_QL80_.jpg" alt="Lana3" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+        <div id="Lana3" class="container1">
+            <img id="imagem2"src="https://m.media-amazon.com/images/I/71db3Yhv6AL._UF1000,1000_QL80_.jpg" alt="Lana3" style="width:100%;max-width:600px;height:auto;" class="centro-block">
         </div>
 </a>
 <p>"Ultraviolence" é o segundo álbum de estúdio de Lana Del Rey e apresenta uma sonoridade mais sombria e crua em comparação com seu antecessor. Produzido por Dan Auerbach do The Black Keys, o álbum mergulha em temas de destruição emocional e relações abusivas, com faixas como "West Coast" e "Brooklyn Baby" destacando a versatilidade de Lana como artista. A produção minimalista e a estética vintage do álbum reforçam a imagem de Lana como uma cantora que desafia as normas do mainstream. </p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="Honeymoon" title="Honeymoon">
     <h2>Honeymoon (2015)</h2>
-        <div id="Lana4">
-            <img src="https://m.media-amazon.com/images/I/71ZvezJ2OoL._UF1000,1000_QL80_.jpg" alt="Lana4" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+        <div id="Lana4" class="container1">
+            <img id="imagem3" src="https://m.media-amazon.com/images/I/71ZvezJ2OoL._UF1000,1000_QL80_.jpg" alt="Lana4" style="width:100%;max-width:600px;height:auto;" class="centro-block">
         </div>
 </a>
 <p>"Honeymoon" vê Lana Del Rey retornando a uma produção mais orquestral e cinematográfica, evocando a grandiosidade de Hollywood e o romantismo melancólico. Canções como "High By the Beach" e "Freak" exploram temas de escapismo e desejo, enquanto a produção rica e detalhada cria uma atmosfera de sonho. O álbum é um reflexo da habilidade de Lana em combinar narrativas líricas profundas com uma produção musical que é ao mesmo tempo moderna e nostálgica.</p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="LFL" title="Lust for Life">
     <h2>Lust for Life (2017)</h2>
-        <div id="Lana5">
-            <img src="https://m.media-amazon.com/images/I/81mI2S59PzL._UF1000,1000_QL80_.jpg" alt="Lana5" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+        <div id="Lana5" class="container1">
+            <img id="imagem4" src="https://m.media-amazon.com/images/I/81mI2S59PzL._UF1000,1000_QL80_.jpg" alt="Lana5" style="width:100%;max-width:600px;height:auto;" class="centro-block">
         </div>
 </a>
 <p>"Lust for Life" representa uma evolução no som de Lana Del Rey, apresentando colaborações com artistas como The Weeknd, A$AP Rocky e Stevie Nicks. O álbum aborda temas de esperança e otimismo, uma mudança em relação aos trabalhos anteriores mais sombrios. Faixas como "Love" e "Lust for Life" destacam uma Lana mais madura e reflexiva, enquanto ainda mantém a estética melancólica e cinematográfica que é sua marca registrada.</p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="NFR" title="Norman Fucking Rockwell!">
     <h2>Norman Fucking Rockwell! (2019)</h2>
-    <div id="Lana6">
-        <img src="https://m.media-amazon.com/images/I/91XkHPMMSnL._UF1000,1000_QL80_.jpg" alt="Lana6" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+    <div id="Lana6" class="container1">
+        <img id="imagem5" src="https://m.media-amazon.com/images/I/91XkHPMMSnL._UF1000,1000_QL80_.jpg" alt="Lana6" style="width:100%;max-width:600px;height:auto;" class="centro-block">
     </div>
 </a>
 <p>"Norman Fucking Rockwell!" é amplamente aclamado como um dos melhores trabalhos de Lana Del Rey, recebendo elogios por sua composição lírica e produção refinada. Trabalhando com o produtor Jack Antonoff, Lana criou um álbum que é ao mesmo tempo introspectivo e expansivo, com faixas como "Mariners Apartment Complex" e "Venice Bitch" explorando a complexidade das relações humanas e a paisagem emocional da América contemporânea. O álbum solidificou ainda mais a posição de Lana como uma das mais importantes cantoras e compositoras de sua geração.</p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="COTCC" title="Chemtrails Over the Country Club">
     <h2>Chemtrails Over the Country Club (2021)</h2>
-    <div id="Lana7">
-        <img src="https://m.media-amazon.com/images/I/81SO7Ew8ntL._UF1000,1000_QL80_.jpg" alt="Lana7" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+    <div id="Lana7" class="container1">
+        <img id="imagem6"src="https://m.media-amazon.com/images/I/81SO7Ew8ntL._UF1000,1000_QL80_.jpg" alt="Lana7" style="width:100%;max-width:600px;height:auto;" class="centro-block">
     </div>
 </a>
 <p>"Chemtrails Over the Country Club" continua a explorar os temas de identidade americana e introspecção pessoal. O álbum apresenta uma produção mais folk e country, com canções como "White Dress" e a faixa-título refletindo uma Lana mais contemplativa e introspectiva. A colaboração contínua com Jack Antonoff resultou em um som coeso e maduro, mostrando a evolução artística de Lana Del Rey ao longo dos anos.</p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="BB" title="Blue Banisters">
     <h2>Blue Banisters (2021)</h2>
-    <div id="Lana8">
-        <img src="https://m.media-amazon.com/images/I/81egkSH1CCL._UF1000,1000_QL80_.jpg" alt="Lana8" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+    <div id="Lana8" class="container1">
+        <img id="imagem7"src="https://m.media-amazon.com/images/I/81egkSH1CCL._UF1000,1000_QL80_.jpg" alt="Lana8" style="width:100%;max-width:600px;height:auto;" class="centro-block">
     </div>
 </a>
 <p>"Blue Banisters" é um álbum que mergulha profundamente nas experiências pessoais de Lana Del Rey, explorando temas de amizade, perda e autoaceitação. Com uma produção mais íntima e letras confessionais, o álbum inclui faixas como "Text Book" e "Arcadia" que oferecem um vislumbre da vida interior de Lana. "Blue Banisters" reafirma seu talento como compositora e sua capacidade de criar música que ressoa profundamente com seus ouvintes.</p>
 <p><a href="#">Voltar ao topo da página</a></p><br>
 <a name="DYKTTATUOB" title="Did You Know That There's a Tunnel Under Ocean Blvd">
     <h2>Did You Know That There's a Tunnel Under Ocean Blvd (2023)</h2>
-    <div id="Lana9">
-        <img src="https://m.media-amazon.com/images/I/51hyMXRtFzL._UF1000,1000_QL80_.jpg" alt="Lana9" style="width:100%;max-width:600px;height:auto;" class="centro-block">
+    <div id="Lana9" class="container1">
+        <img id="imagem8"src="https://m.media-amazon.com/images/I/51hyMXRtFzL._UF1000,1000_QL80_.jpg" alt="Lana9" style="width:100%;max-width:600px;height:auto;" class="centro-block">
     </div>
 </a>
 <p>"Did You Know That There's a Tunnel Under Ocean Blvd" é o oitavo álbum de Lana Del Rey, lançado em março de 2023. Este trabalho é uma reflexão profunda sobre temas como identidade, fama e introspecção pessoal, evidenciando a maturidade artística da cantora. O álbum mistura elementos de pop alternativo, folk e soul, com produção minimalista e arranjos orquestrais que criam uma atmosfera rica e emocional. As letras poéticas e pessoais exploram o impacto da fama, a busca por autenticidade e o estado emocional da sociedade contemporânea, solidificando ainda mais a capacidade de Lana Del Rey de inovar e conectar-se com seus ouvintes em um nível íntimo e introspectivo.</p>
@@ -86,39 +87,46 @@
 
 <div class="container"> 
     <h3>Qual é o seu álbum favorito da Lana Del Rey?</h3>
-    <label for="bornToDie">Born to Die (2012)</label>
-    <input type="radio" name="album" id="bornToDie" value="bornToDie"><br>
-    <label for="ultraviolence">Ultraviolence (2014)</label>
-    <input type="radio" name="album" id="ultraviolence" value="ultraviolence"><br>
-    <label for="honeymoon">Honeymoon (2015)</label>
-    <input type="radio" name="album" id="honeymoon" value="honeymoon"><br>
-    <label for="lustForLife">Lust for Life (2017)</label>
-    <input type="radio" name="album" id="lustForLife" value="lustForLife"><br>
-    <label for="normanRockwell">Norman Fucking Rockwell! (2019)</label>
-    <input type="radio" name="album" id="normanRockwell" value="normanRockwell"><br>
-    <label for="chemtrails">Chemtrails Over the Country Club (2021)</label>
-    <input type="radio" name="album" id="chemtrails" value="chemtrails"><br>
-    <label for="blueBanisters">Blue Banisters (2021)</label>
-    <input type="radio" name="album" id="blueBanisters" value="blueBanisters"><br>
-    <label for="tunnel">Did You Know That There's a Tunnel Under Ocean Blvd (2023)</label>
-    <input type="radio" name="album" id="tunnel" value="tunnel"><br>
+    <form id="voteForm">
+        <label for="bornToDie">Born to Die (2012)</label>
+        <input type="radio" name="album" id="bornToDie" value="bornToDie"><br>
+        <label for="ultraviolence">Ultraviolence (2014)</label>
+        <input type="radio" name="album" id="ultraviolence" value="ultraviolence"><br>
+        <label for="honeymoon">Honeymoon (2015)</label>
+        <input type="radio" name="album" id="honeymoon" value="honeymoon"><br>
+        <label for="lustForLife">Lust for Life (2017)</label>
+        <input type="radio" name="album" id="lustForLife" value="lustForLife"><br>
+        <label for="normanRockwell">Norman Fucking Rockwell! (2019)</label>
+        <input type="radio" name="album" id="normanRockwell" value="normanRockwell"><br>
+        <label for="chemtrails">Chemtrails Over the Country Club (2021)</label>
+        <input type="radio" name="album" id="chemtrails" value="chemtrails"><br>
+        <label for="blueBanisters">Blue Banisters (2021)</label>
+        <input type="radio" name="album" id="blueBanisters" value="blueBanisters"><br>
+        <label for="tunnel">Did You Know That There's a Tunnel Under Ocean Blvd (2023)</label>
+        <input type="radio" name="album" id="tunnel" value="tunnel"><br>
         <br>
         <input type="submit" value="enviar" class="centro-block">
+    </form>
+    <div id="voteMessage" style="display:none; color: green; margin-top: 10px;">Voto registrado com sucesso!</div>
 </div>
+
 <br>
 <br>
 <div class="container"> 
     <h3>Quer ver o seu artista favorito por aqui? Mande a sua sugestão!</h3>
-    <form action="mailto:ferviotto@exemplo.com" method="post" enctype="multipart/form-data">
+    <form id="suggestionForm" action="mailto:ferviotto@exemplo.com" method="post" enctype="multipart/form-data">
         Nome: <br>
         <input type="text" name="nome" value=""><br>
         E-mail: <br>
         <input type="email" name="mail" value=""><br>
         Sugestão: <br>
-        <textarea rows="4" cols="50" placeholder=""></textarea><br>
+        <textarea rows="4" cols="50" placeholder="" name="suggestion"></textarea><br>
         <br>
         <input type="submit" value="enviar"><br>
-    </div>
+    </form>
+    <div id="suggestionMessage" style="display:none; color: green; margin-top: 10px;">Sugestão enviada com sucesso!</div>
+</div>
+
     <p><a href="#">Voltar ao topo da página</a></p>
 </body>
 </html>
